--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@ layout: default
 
 {% include header.html %}
 {% include portfolio_grid.html %}
+<section id="ranking">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Classement</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <img class="img-responsive img-centered" src="{{ site.baseurl }}/img/classement.png">
+    </div>
+</section>
 
 <script src="{{ site.baseurl }}/js/uxTour.js"></script>
 <script>
